<resources>
    <string name="app_name">Bettina Logistics</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập hoặc đăng ký</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">Đăng nhập thất bại </string>
    <string name="bettina_name">Bettina</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="forgot_password_title_dialog">Quên mật khẩu</string>
    <string name="or_login_with">hoặc đăng nhập với...</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="new_user">Bạn là người dùng mới?</string>
    <string name="register">Đăng ký</string>
    <string name="title_signup">Điền đầy đủ thông tin để đăng ký</string>
    <string name="full_name">Họ tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="sign_up">Đăng nhập</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="invalid_field">Mục này là bắt buộc</string>
    <string name="invalid_pass">Mật khẩu bắt buộc có độ dài từ  8–50 ký tự, phải có ít nhât 1 ký tự số, 1 ký tự chữ cái viết thường, viết hoa, không khoảng trắng, không có dấu.</string>
    <string name="date_picker">DatePicker</string>
    <string name="submit">Đồng ý</string>
    <string name="EURROR_EMAIL">Xin vui lòng nhập email để tiếp tục</string>
    <string name="pass_reset_sent_email">Mật khẩu được reset lại gửi đã gửi qua email của bạn.</string>
    <string name="close">Đóng</string>
    <string name="sign_in">Đăng ký</string>
    <string name="LOGIN_SUCCESS">Đăng nhập thành công</string>
    <string name="VERIFY_EMAIL">Xin hãy xác thực email</string>
    <string name="ERRO_LOGIN">Tài khoản sai hoặc không tồn tại. Quý khách kiểm tra lại tài khoản. Nếu chưa có tài khoản vui lòng đăng ký tài khoản.</string>
    <string name="TITLE_DATE_PICKER">Chọn ngày sinh</string>
    <string name="str_home">Trang chủ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transport_service">Các dịch vụ vận chuyển</string>
    <string name="transport_type">Các loại vận chuyển</string>
    <string name="str_noti">Thông báo</string>
    <string name="str_discount">Khuyến mãi</string>
    <string name="str_search">Tìm kiếm</string>
    <string name="str_order">Đơn hàng</string>
    <string name="str_balance_fluctuations">Biến động số dư</string>
    <string name="str_pending_approval">Đang chờ duyệt</string>
    <string name="str_Delivering">Đang giao</string>
    <string name="str_road_transport">Đường bộ</string>
    <string name="str_sea_transport">Đường biển</string>
    <string name="str_air_transport">Hàng không</string>
    <string name="str_lcl">Hàng lẻ</string>
    <string name="str_fcl_transport">Hàng nguyên công</string>
    <string name="str_container">Xe container/ Xe tải</string>
    <string name="str_plane">Máy bay</string>
    <string name="str_truck">Xe tải</string>
    <string name="str_ship">Tàu</string>
    <string name="str_slider_seaway">\t\tDỊCH VỤ VẬN CHUYỂN ĐƯỜNG BIỂN<i>\nChất lượng tốt - giá rẻ cạnh tranh</i></string>
    <string name="str_slider_flightway">\t\tDỊCH VỤ VẬN CHUYỂN ĐƯỜNG HÀNG KHÔNG<i>\nChất lượng tốt - giá rẻ cạnh tranh</i></string>
    <string name="str_slider_roadway">\t\tDỊCH VỤ VẬN CHUYỂN ĐƯỜNG BỘ<i>\nChất lượng tốt - giá rẻ cạnh tranh</i></string>
    <string name="str_pending_order">Chờ duyệt</string>
    <string name="str_transporting_order">Đang vận chuyển</string>
    <string name="str_waiting_transporting_order">Chờ vận chuyển</string>
    <string name="str_finish_order">Đã giao</string>
    <string name="str_list_order">Danh sách đơn hàng</string>
    <string name="str_add_new_product">Thêm mặt hàng</string>
    <string name="str_ordering">Đặt hàng</string>
    <string name="str_product_image">Hình ảnh</string>
    <string name="str_product_name">Tên sản phẩm</string>
    <string name="str_product_des">Mô tả</string>
    <string name="str_product_quantity">Số lượng</string>
    <string name="str_product_volume">Số khối</string>
    <string name="str_product_volume_hint">Thể tích</string>
    <string name="str_product_mass">Khối lượng \n(1 thùng-Kg)</string>
    <string name="str_product_mass_hint">Khối lượng</string>
    <string name="str_product_Number_of_bins">Số thùng</string>
    <string name="str_create_product">Thêm vào đơn hàng</string>
    <string name="str_order_lcl">Hàng lẻ</string>
    <string name="str_order_fcl">Hàng nguyên cont</string>
    <string name="str_error_product_image_null">Ảnh không được để trống</string>
    <string name="str_error_product_data_blank_null">Yêu cầu nhập đủ dữ liệu về đơn hàng</string>
    <string name="header_order">Danh sách đơn hàng</string>
    <string name="str_add_order_success">Đặt hàng thành công</string>
    <string name="str_add_order_fail">Đặt hàng không thành công. Vui lòng thử lại</string>
    <string name="str_get_all_order_fail">Mời quý khách thêm đơn hàng</string>
    <string name="str_sign_up_success">Đăng nhập thành công</string>
    <string name="str_please_signup">Vui lòng đăng nhập để sử dụng dữ liệu</string>
    <string name="str_hello">Xin chào %s</string>
    <string name="str_agree">Đồng ý</string>
    <string name="header_product">Danh sách sản phẩm</string>
    <string name="str_confirm_out">Bạn có muốn tiếp tục điền thông tin sản phẩm?</string>
    <string name="str_confirm_order">Bạn muốn tiếp tục đặt hàng không?</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="sign_in_failed">Đăng ký không thành công. Mời quý khách kiểm tra thông tin và thao tác lại</string>
    <string name="pass_reset_fail">Có lỗi trong quá trình xảy ra. Hãy kiểm tra lại email của bạn đã đăng ký chưa và thử lại</string>
    <string name="str_sign_in_success">Đăng ký thành công.</string>
    <string name="str_continue">Tiếp tục</string>
    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Open Drawer</string>
    <string name="API_KEY">AIzaSyCbSowrmJ7XdfVlT-nCvHNI-pmmaD0wF_8</string>
    <string name="HANDLE_ERROR">Có lỗi xảy ra trong quá trình xử lý, quý khách thử lại trong giây lát</string>
    <string name="str_choose_origin_address">Chọn địa điểm gửi hàng</string>
    <string name="str_choose_destination_address">Chọn địa điểm giao hàng</string>
    <string name="str_type_transaction">Hình thức vận chuyển</string>
    <string name="str_client_choose_transaction">Khách hàng chọn hình thức vận chuyển</string>
    <string name="str_shop_choose_transaction">Đơn vị vận chuyển tự chọn hình thức vận chuyển</string>
    <string name="str_enter_address_detail">Số nhà/ tên đường chi tiết</string>
    <string name="str_method_transaction">Cách thức vận chuyển</string>
    <string name="str_chinh_ngach">Chính ngạch</string>
    <string name="str_tieu_ngach">Tiểu ngạch</string>
    <string name="str_choose_type_transaction">Chọn loại hình vận chuyển</string>
    <string name="str_confirm">Xác nhận</string>
    <string name="str_company_info">Thông tin công ty</string>
    <string name="str_company_name">Tên công ty</string>
    <string name="str_company_code">Mã số thuế</string>
    <string name="str_comany_address">Địa chỉ công ty</string>
    <string name="str_company_email">Email công ty</string>
    <string name="str_origin_address_enter">Nhập địa điểm gửi hàng</string>
    <string name="str_destination_address_enter">Nhập địa điểm giao hàng</string>
    <string name="str_find_path">Tìm đường</string>
    <string name="str_origin_address">Địa điểm gửi hàng</string>
    <string name="str_destination_address">Địa điểm giao hàng</string>
    <string name="str_choose_address">Chọn địa điểm giao/ nhận</string>
    <string name="str_address_order">Địa điểm giao/ nhận hàng</string>
    <string name="str_enter_company_name">Tên công ty</string>
    <string name="str_fill_company_info">Thông tin công ty</string>
    <string name="str_enter_company_address">Địa chỉ công ty</string>
    <string name="str_enter_company_tex_code">Mã số thuế</string>
    <string name="str_enter_company_business_type">Lĩnh vực kinh doanh</string>
    <string name="str_add_company_success">Thêm mới thông tin thành công</string>
    <string name="str_add_company_failed">Thêm mới thông tin thất bại, mời quý khách thao tác lại</string>
    <string name="tr_choose_type_transportation">Vui lòng chọn 1 phương thức vận chuyển</string>
    <string name="tr_choose_method_transportation">Vui lòng chọn 1 hình thức vận chuyển</string>
    <string name="str_phone_contact">Số điện thoại liên hệ</string>
    <string name="str_list_product">Danh sách hàng hóa</string>
    <string name="str_user_confirm">Thông tin công ty</string>
    <string name="str_order_confirm">Đặt hàng</string>
    <string name="str_user_name">Người đại diện</string>
    <string name="str_customer_name">Người nhận hàng</string>
    <string name="str_choose_edit_infor">Chỉnh sửa thông tin</string>
    <string name="str_edit_order">Chỉnh sửa thông tin người dùng</string>
    <string name="str_edit_info">Chỉnh sửa thông tin đơn hàng</string>
    <string name="str_choose_edit_content">Người dùng chọn 1 trong 2 để chỉnh sửa</string>
    <string name="str_payment_info">Thông tin thanh toán</string>
    <string name="str_payment_amount">Số tiền đơn hàng</string>
    <string name="str_payment_voucher">Khuyến mãi</string>
    <string name="str_payment_time">Thời gian thanh toán</string>
    <string name="str_payment_time_success">Thanh toán sau khi nhận hàng</string>
    <string name="str_payment_debt">Công nợ</string>
    <string name="str_payment_debt_time">Tối đa 10 ngày sau khi nhận hàng</string>
    <string name="str_payment_sum">Tổng tiền cần thanh toán</string>
    <string name="str_payment_inland_trucking_amount">Tiền vận chuyển nội địa\n(2 chiều)</string>
    <string name="str_payment_service">Tiền dịch vụ \n(Bao gồm: các cước phí,\nthủ tục thông quan,..)</string>
    <string name="str_order_amount">Giá trị đơn hàng</string>
    <string name="str_save">Lưu</string>
    <string name="str_insert_track">Thêm lộ trình</string>
    <string name="str_address_track">Địa điểm hàng hiện tại</string>
    <string name="str_enter_address">"Nhập địa điểm "</string>
    <string name="str_status_track">Trạng thái đơn hàng hiện tại</string>
    <string name="str_enter_status">"Nhập trạng thái đơn hàng "</string>
    <string name="str_payment_order">Thanh toán đơn hàng</string>
    <string name="str_choose_card">Chọn thẻ thanh toán</string>
    <string name="str_card">Thẻ</string>
    <string name="str_entern_content">Nhập nội dung</string>
    <string name="str_content_payment">Nội dung thanh toán</string>
    <string name="str_payment">Thanh toán</string>
    <string name="str_img_confirm_payment">Ảnh đã thanh toán của khách hàng</string>
    <string name="str_entern_choose_image_payment">Chọn hóa đơn thanh toán</string>
    <string name="str_enter_company_phone">Nhập số điện thoại công ty</string>
    <string name="str_shipper_name">Tên xưởng</string>
    <string name="str_enter_shipper_name">Nhập tên xưởng</string>
    <string name="str_enter_shipper_email">Nhập email liên hệ</string>
    <string name="str_shipper_email">Email liên hệ</string>
    <string name="str_shipper_address">Địa chỉ xưởng lấy hàng</string>
    <string name="str_company_phone">Số điện thoại liên hệ nhận hàng</string>
</resources>